2006-03-23  Wim Taymans  <wim@fluendo.com>

	Patch by: Julien MOUTTE <julien at moutte dot net>

	* gst/videotestsrc/gstvideotestsrc.c: (gst_video_test_src_query),
	(gst_video_test_src_do_seek), (gst_video_test_src_create):
	Partially handle 0 framerate, only EOS after the first frame
	is missing.

2006-03-23  Wim Taymans  <wim@fluendo.com>

	Patch by: Fabrizio Gennari <fabrizio dot ge at tiscali dot it>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_video_caps),
	(gst_riff_create_video_template_caps):
	* gst/ffmpegcolorspace/avcodec.h:
	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	(gst_ffmpeg_pixfmt_to_caps), (gst_ffmpeg_caps_to_pixfmt),
	(gst_ffmpegcsp_avpicture_fill):
	* gst/ffmpegcolorspace/imgconvert.c:
	Patch for support of YVU9 AVI files (#334822)

2006-03-22  Edward Hervey  <edward@fluendo.com>

	* docs/design/design-decodebin.txt:
	Added design document for new decodebin
	(Target Caps): text/x-pango-markup is also a default target caps.

2006-03-22  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_dispose):
	Since we _parent the ringbuffer, we also need to
	_unparent instead of a plain _unref.

2006-03-22  Wim Taymans  <wim@fluendo.com>

	* tests/examples/seek/seek.c: (end_scrub), (do_seek), (seek_cb),
	(stop_seek), (scrub_toggle_cb), (main):
	Add scrub checkbox.

2006-03-21  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/ogg/gstoggparse.c: (gst_ogg_parse_find_stream),
	(gst_ogg_parse_chain):
	  Fix very inefficient usage of linked lists (#335365).

2006-03-21  Edward Hervey  <edward@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_dispose):
	* gst/playback/gstplaybin.c: (handoff):
	* gst/playback/gststreamselector.c:
	(gst_stream_selector_set_property):
	gcc 4.1 unreferenced pointer fixes.
	* sys/ximage/ximagesink.c: (gst_ximagesink_ximage_put):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xvimage_put):
	gst_buffer_ref() now takes a GstBuffer*.
