@@ -106,6 +106,7 @@ gst_video_sink_init (GstVideoSink * videosink)
 
   /* 20ms is more than enough, 80-130ms is noticable */
   gst_base_sink_set_max_lateness (GST_BASE_SINK (videosink), 20 * GST_MSECOND);
+  gst_base_sink_set_qos_enabled (GST_BASE_SINK (videosink), TRUE);
 }
 
 static void
